# siku

./: .gitignore  AUTHORS  Makefile  Makefile.am  NEWS  README  README.md  bootstrap.py  config.h  config.h.in~  config.py  config.status  configure.ac.tpl  githelp.txt  help.txt  libtool  plot_config.py
doc/: Makefile.doc  acknowledgements.aux  acknowledgements.tex  coordinates.tex  date.aux  developer.aux  developer.bbl  developer.blg  developer.rtf  developer.tex  developer.toc  diagnostics.tex  dynamics.tex  forcing.tex  formulas.tex  freedrift.tex  geometry2d.tex  introduction.tex  mesh.tex  polygon.tex  quats.tex  siku.bib  titlepage.tex  wind.tex  wind.tex.backup
doc/borders/: borders_manual.rtf
doc/mesh/: borders_manual.rtf
lib/: README
m4/: ax_boost_base.m4  python.m4
mesh/: README  alaska_n_cap.py  alaska_n_cap_RELEASE.py  anc.py  boarder_gen.py  border_gen.py  borders.py  gen_points.py  landfilter.py  points.py  smoth_alaska.py
pics/: Makefile.img
python/: freedrift.py
python/bgenext/: instruction  setup.py
python/border/: ExtBordsmodule.cpp
python/border generating extension/: ExtBordsmodule.cpp
python/siku/: .gitignore  Dict.py  Draw_config.txt  GMT_Drawer.py  UserGuide.tex  __init__.py  color_works.py  dict.txt  draw_config.txt  draw_dict  earth.py  element.py  geocoords.py  geofiles.py  gmt-footer.sh.tpl  gmt-header.sh.tpl  gmt-vfield.sh.tpl  gmt.py  gmt_Drawer.py  gmt_Plotter.py  h5load.py  hpgrid.py  ice_nc.py  int_res  int_res1  interpolate.py  invecs.txt  material.py  nmc.py  noisy_grid.py  outDraw(zoomed).eps  plot_config.py  plot_config.txt  plotting_test.py  poly_voronoi.py  polygon.py  rand_vec.py  regrid.py  wnd.py
samples/: CC_config.py  GP_config.py  RTF_config.py  _.freedrift.py  __freedrift.py  beaufort.py  beaufort94.py  beaufort94_plot.py  beaufort_high.py  beaufort_plot.py  beaufort_shot.py  beaufort_triang.py  carib_pair_slowdowns.py  caribbean_crisis.py  caribbean_distr.py  caribbean_plot.py  caribbean_plot1.py  caribbean_plot_e.py  caribbean_plot_wnd.py  caribbean_var_eq.py  caribbean_var_eq_e.py  caribbean_var_eq_n.py  caribbean_var_eq_w.py  caribbean_var_slide.py  caribbean_var_stretch.py  caribbean_various.py  carribean_chain.py  complete.py  complete_config.py  contours.ll  draw_dict  free_distr.py  freedrift.py  freedrift_.py  freedrift_3_leaves_n_wind.py  freedrift_chain.py  full_config.py  global_positioning.py  grid_config.py  grid_plot.sh  (+13 more)
samples/benchmarks/: AnC.voronoi.xyz  AnC.voronoi.xyzf  AnC1.voronoi.xyz  AnC1.voronoi.xyzf  AnC2.voronoi.xyz  AnC2.voronoi.xyzf  analysis.txt  beaufort94.py  draw_dict  readme.txt  smA.voronoi.xyz  smA.voronoi.xyzf
samples/err/: erplt.py
samples/forces/: gr.sh
src/: Doxygen.tpl  Makefile  Makefile.am  README  auxutils.cc  auxutils.hh  contact_detect.cc  contact_detect.hh  contact_force.cc  contact_force.hh  coordinates.cc  coordinates.hh  description.hh  diagnostics.cc  diagnostics.hh  dynamics.cc  dynamics.hh  element.cc  element.hh  errors.hh  forces_mass.cc  forces_mass.hh  geom_types.hh  geometry.cc  geometry.hh  globals.cc  globals.hh  highio.cc  highio.hh  info.hh  interactions.cc  interactions.hh  lowio.cc  lowio.hh  material.hh  mesh.cc  mesh.hh  modeltime.cc  modeltime.hh  monitoring.cc  (+22 more)
src/.deps/: siku-auxutils.Po  siku-coordinates.Po  siku-diagnostics.Po  siku-dynamics.Po  siku-element.Po  siku-highio.Po  siku-lowio.Po  siku-mesh.Po  siku-modeltime.Po  siku-monitoring.Po  siku-mproperties.Po  siku-options.Po  siku-position.Po  siku-scheduler.Po  siku-siku.Po  siku-sikupy.Po  siku-vecfield.Po
src/geometry/: Makefile.am  geom_types.hh  geometry.cc  geometry.hh  matrix2d.hh  matrix3d.hh  object2d.hh  pnt2d.hh  pnt3d.hh  point2d.hh  point3d.hh  polygon2d.cc  polygon2d.hh  polyhedron3d.cc  polyhedron3d.hh  segment2d.cc  segment2d.hh  segment3d.cc  segment3d.hh  vec2d.hh  vec3d.hh  vector2d.hh  vector3d.hh  vector_algebra2d.hh  vector_algebra3d.hh
src/geometry/tests/: Makefile.am  README  testobject2d.cc  testpnt2d.cc  testpoint2d.cc  testpoly2d.cc  testsegment2d.cc  testvct2d.cc  testvector2d.cc
voronoi/: Makefile.voronoi  sphere_cvt.f90  sphere_delaunay_run.py  sphere_voronoi.f90  stripack.f90  stripack_delaunay.f90
